<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.TaskActivity">



        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            />

        <ProgressBar
            android:id="@+id/progress_bar_task"
            style="@style/CustomProgressBar"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:indeterminate="false"
            android:max="25"
            android:progress="20" />

        <EditText
            android:id="@+id/task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:hint="@string/write_name"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="#000000"
            android:textSize="44dp" />

        <EditText
            android:id="@+id/task_time_in_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25"
            android:textColor="#000000"
            android:textSize="44dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                app:backgroundTint="#C8E6C9" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                app:backgroundTint="#FFF9C4" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                app:backgroundTint="#FFCDD2" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_new_task"
            app:backgroundTint="#C8E6C9" />



    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_task"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>